--- a/src/TodoForm.css
+++ b/src/TodoForm.css
@@ -15,6 +15,8 @@
   width: 30%;
   border: 2px solid transparent;
   transition: border 0.2s ease;
+  font-weight: 600;
+  color: #333;
 }
 
 .TodoForm input:focus {
@@ -29,6 +31,12 @@
   padding: 0.7rem 1.5rem;
   cursor: pointer;
   border-radius: 5px;
-  background-color: #61dbfb;
+  background-color: rgb(93, 201, 228);
   color: #fbfbfc;
+  font-weight: 600;
+  transition: background-color 0.2s ease;
+}
+
+.TodoForm button:hover {
+  background-color: rgb(76, 184, 211);
 }
