--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -10,10 +10,34 @@
   padding: 3rem;
   border-radius: 5px;
   box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .TodoList-heading {
   font-size: 1.7rem;
   color: #f4f4f4;
   margin-top: 0;
+}
+
+.TodoList ul {
+  width: 100%;
+  height: 70%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
+
+.TodoList ul::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.TodoList ul::-webkit-scrollbar-track {
+  border: 3px solid transparent;
+}
+
+.TodoList ul::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 10px 10px #abafb3;
+  /* background-color: #abafb3; */
+  border: 3px solid transparent;
 }
