--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -26,10 +26,11 @@
   margin: 0;
   padding: 0;
   overflow: auto;
+  padding-right: 0.2rem;
 }
 
 .TodoList ul::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.7rem;
 }
 
 .TodoList ul::-webkit-scrollbar-track {
@@ -37,7 +38,7 @@
 }
 
 .TodoList ul::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px #abafb3;
+  box-shadow: inset 0 0 10px 10px #6b6b6b;
   /* background-color: #abafb3; */
   border: 3px solid transparent;
 }
