--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -6,17 +6,19 @@
   transform: translate(-50%, -50%);
   width: 70%;
   height: 70vh;
-  background-color: #3a3f49;
+  background-color: #ffff;
   padding: 3rem;
   border-radius: 5px;
-  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1rem 2rem rgba(17, 0, 255, 0.2);
   overflow: hidden;
 }
 
 .TodoList-heading {
   font-size: 1.7rem;
-  color: #f4f4f4;
+  color: #3459ff;
   margin-top: 0;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .TodoList ul {
@@ -38,7 +40,12 @@
 }
 
 .TodoList ul::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px #6b6b6b;
-  /* background-color: #abafb3; */
+  border-radius: 5px;
+  box-shadow: inset 0 0 10px 10px #c0ccff;
   border: 3px solid transparent;
+}
+
+.TodoList ul::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+  box-shadow: inset 0 0 10px 10px #aabaff;
 }
