--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -49,3 +49,23 @@
   cursor: pointer;
   box-shadow: inset 0 0 10px 10px #aabaff;
 }
+
+.task-enter {
+  opacity: 0.01;
+  transform: translateY(-20px);
+}
+
+.task-enter.task-enter-active {
+  opacity: 1;
+  transition: opacity 200ms ease, transform 200ms ease;
+  transform: translateY(0);
+}
+
+.task-leave {
+  opacity: 1;
+}
+
+.task-leave.task-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease;
+}
